--- a/react-todo-list/src/App.css
+++ b/react-todo-list/src/App.css
@@ -351,6 +351,7 @@ option:last-child {
   fill-opacity: 0.5;
   margin-right: 1rem;
 }
+
 .check-icon:hover {
   fill-opacity: 1;
   color: red;
@@ -376,8 +377,36 @@ option:last-child {
 }
 
 .calenderContainer {
-  padding: 0rem;
-  background: transparent;
-  width: 21.85rem;
-  height: 21rem;
+  display: none;
+}
+
+.calenderContainer.Selected {
+  display: block;
+}
+
+.divButton {
+  display: none;
+}
+
+.divButton.Selected {
+  display: block;
+  color: #8d8d8d;
+  font-size: 0.6rem;
+  background: #88888849;
+  padding: 0.3rem;
+  border-radius: 0.6rem;
+  border: 1px solid #88888849;
+  width: 3.5rem;
+  margin: 0.5rem;
+  position: relative;
+  top: 0.25rem;
+}
+
+.divButton.divButton.Selected:hover {
+  box-shadow: 0px 0px 6px #88888849;
+  cursor: pointer;
+}
+
+.Selectors {
+  display: flex;
 }
